--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       the name keep your left and right wrist far from each other. 
       Move you nose to move the name</span>
     <br>
-
+    <span id="squarelength"></span>
   </h3>
 </center>
 
